Adding Demo page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="about" id="about">
         <div class="container">
             <h2>About the Project</h2>
-            <p>This project was inspired by my desire to create an efficient and user-friendly system for managing student laptops. During my time at Holberton School, I developed this as part of my portfolio to showcase my skills. The project is live and can be accessed <a href="http://100.26.222.36:8000">here</a>.</p>
+            <p>This project was inspired by my desire to create an efficient and user-friendly system for managing student laptops. During my time at Holberton School, I developed this as part of my portfolio to showcase my skills. The project is live and can be accessed <a href="Demo.html" target="_blank">Demo Video</a>.</p>
             <p>Meet the team:</p>
             <ul>
                 <li><a href="https://linkedin.com/in/your-profile">LinkedIn</a> | <a href="https://github.com/your-profile">GitHub</a> | <a href="https://twitter.com/your-profile">Twitter</a></li>
