Adding Demo page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#about">About</a></li>
                 </ul>
             </div>
-            <a href="http://100.26.222.36:8000" class="btn">Visit Project</a>
+            <a href="image/DEMO.mp4" class="btn">Visit Project</a>
         </nav>
     </header>
 
