Adding Demo page

--- a/index.html
+++ b/index.html
@@ -36,19 +36,58 @@
         <div class="container">
             <h2>Key Features</h2>
             <div class="feature" id="admin">
-                <img src="image/Screenshot 2024-08-21 005644.png" alt="Feature 1">
+                <img src="image/Screenshot 2024-09-24 000704.png" alt="Feature 1">
                 <h3>Admin Page</h3>
-                <p>Description of Feature 1.</p>
+                <p>
+                    The Admin Page serves as the central hub for managing 
+                    all student-related information within the LaptopGuard system. 
+                    Here, administrators have complete control over adding, updating, 
+                    and deleting student records. The page provides a streamlined view 
+                    of all registered students, enabling easy access to student profiles, 
+                    their associated laptop images, and the check-in/check-out logs. 
+                    The admin can register new students by entering details such as the student's 
+                    name, ID, year, department, and gender. Additionally, 
+                    the admin can update existing student records with new 
+                    information or remove them from the system if necessary. 
+                    This page also allows for the bulk deletion of multiple students, 
+                    further simplifying student management. The layout is intuitive, 
+                    designed to ensure efficient oversight, and helps prevent unauthorized 
+                    access by ensuring only admin-level users can access the functionalities provided.
+                </p>
             </div>
             <div class="feature" id="library">
-                <img src="image/Screenshot 2024-08-21 005750.png" alt="Feature 2">
+                <img src="image/Screenshot 2024-09-24 000750.png" alt="Feature 2">
                 <h3>library check in/out page</h3>
-                <p>Description of Feature 2.</p>
+                <p>
+                    The Library Check-In/Out Page allows students to record their entry 
+                    and exit times from the library. When a student checks in, the system 
+                    logs the timestamp, initiating a record of the student's total time spent 
+                    in the library. Upon check-out, the system calculates the duration of the 
+                    student's library visit and updates their total library time accordingly. 
+                    This feature is essential for tracking how long students spend in the library, 
+                    a critical factor in managing laptop security. The page displays each student’s 
+                    current status (checked in or out) and updates dynamically. This ensures real-time 
+                    monitoring of all students inside the library, providing security personnel 
+                    with an up-to-date record of who is inside the library at any given time. 
+                    The page also has user-friendly prompts and responsive design for seamless usage on different devices.
+                </p>
             </div>
             <div class="feature" id="exit">
-                <img src="image/Screenshot 2024-08-21 005816.png" alt="Feature 3">
+                <img src="image/Screenshot 2024-09-24 000815.png" alt="Feature 3">
                 <h3>Exit check in/out Page</h3>
-                <p>Description of Feature 3.</p>
+                <p>
+                    The Exit Check-In/Out Page records when students leave the library 
+                    with their laptops. Before students can exit, they are required to 
+                    verify their identity and ownership of their laptop. 
+                    The security personnel will manually match the stored laptop images 
+                    with the actual laptop, ensuring that students do not leave with someone else’s laptop. 
+                    The system logs each exit event, keeping track of the time the 
+                    student leaves and linking it to the library check-in time to complete 
+                    the overall record of the student's library usage. This page plays a crucial 
+                    role in the security of laptops by preventing unauthorized exits with 
+                    unverified laptops. It further supports laptop recovery in case of any 
+                    disputes over ownership, thanks to the stored visual record of the laptops.
+                </p>
             </div>
         </div>
     </section>
@@ -57,13 +96,27 @@
     <section class="about" id="about">
         <div class="container">
             <h2>About the Project</h2>
-            <p>This project was inspired by my desire to create an efficient and user-friendly system for managing student laptops. During my time at Holberton School, I developed this as part of my portfolio to showcase my skills. The project is live and can be accessed <a href="Demo.html" target="_blank">Demo Video</a>.</p>
+            <p>
+                LaptopGuard is an innovative system designed to tackle the problem of laptop 
+                theft in university libraries, first identified at Kotebe University, 
+                where students often leave their laptops unattended while taking breaks, 
+                making them vulnerable to theft. The system allows institutions to track and secure laptops
+                by tying each laptop to a specific student through a registration process that includes 
+                uploading images of the laptop. When students check into the library, their presence is logged,
+                and when they leave, security personnel manually verify that the laptop matches the one on file.
+                This verification process, combined with digital record-keeping, reduces the risk of laptop theft or loss. 
+                LaptopGuard features a comprehensive admin interface for managing student profiles, updating laptop images, 
+                and tracking library logs. The system’s responsive design makes it accessible on various devices, 
+                ensuring ease of use for both students and administrators. By integrating technology and manual processes, 
+                LaptopGuard offers a practical solution to a real-world problem, enhancing security and providing 
+                peace of mind to students and institutions alike. <a href="Demo.html" target="_blank">Demo Video</a>.
+                </p>
             <p>Meet the team:</p>
             <ul>
-                <li><a href="https://linkedin.com/in/your-profile">LinkedIn</a> | <a href="https://github.com/your-profile">GitHub</a> | <a href="https://twitter.com/your-profile">Twitter</a></li>
+                <li><a href="https://www.linkedin.com/in/yadamzer-terefe-a9a930291/">LinkedIn</a> | <a href="https://github.com/yadi09">GitHub</a> | <a href="https://x.com/yadii0988">Twitter</a></li>
                 <!-- Add links for other team members as needed -->
             </ul>
-            <p>Check out the project repository on <a href="https://github.com/your-repo">GitHub</a>.</p>
+            <p>Check out the project repository on <a href="https://github.com/yadi09/LaptopGuard">GitHub</a>.</p>
         </div>
     </section>
 
