Adding Demo page

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 and tracking library logs. The system’s responsive design makes it accessible on various devices, 
                 ensuring ease of use for both students and administrators. By integrating technology and manual processes, 
                 LaptopGuard offers a practical solution to a real-world problem, enhancing security and providing 
-                peace of mind to students and institutions alike. <a href="Demo.html" target="_blank">Demo Video</a>.
+                peace of mind to students and institutions alike. <a href="Demo.html" target="_blank">Demo Video</a> | <a href="https://docs.google.com/presentation/d/1InrxzGiwif19to6XJfvXa6_JW0IUSCaydZsTzPHWQTQ/edit#slide=id.g303c673205d_0_1" target="_blank">Presentation</a>.
                 </p>
             <p>Meet the team:</p>
             <ul>
